removed tailwind, fully bootstrap. added dropdown category dynamic.

--- a/src/ContaPapagneApp/templates/base.html
+++ b/src/ContaPapagneApp/templates/base.html
@@ -11,7 +11,7 @@
       
     {% include 'navbar.html' %}
 
-    <main class="container mx-auto flex flex-col justify-between">
+    <main id="main" class="container mx-auto flex flex-col justify-between">
     {% block content %}
     {% endblock content %}  
     </main>
