--- a/src/ContaPapagneApp/templates/footer.html
+++ b/src/ContaPapagneApp/templates/footer.html
@@ -1,5 +1,5 @@
-<footer class="bg-gray-800 p-4 text-white text-center">
-  <div class="container mx-auto">
-  &copy; Copyright 2024 by <a href="https://github.com/h4rk">you</a>.
-</div>
+<footer class="bg-dark py-4 text-white text-center fixed-bottom">
+  <div class="container">
+    <p>&copy; Copyright 2024 by <a href="https://github.com/h4rk" class="text-white">this guy</a>.</p>
+  </div>
 </footer>
