--- a/src/ContaPapagneApp/templates/mov/list-categorie.html
+++ b/src/ContaPapagneApp/templates/mov/list-categorie.html
@@ -1,5 +1,5 @@
-<div>
+<div id="res_fetch">
 	{% for cat in categorie %}
-	<div>{{cat.nome}}</div>
+	<div class="category-item">{{ cat.nome }}</div>
 	{% endfor %}
 </div>
