--- a/src/ContaPapagneApp/templates/navbar.html
+++ b/src/ContaPapagneApp/templates/navbar.html
@@ -1,28 +1,26 @@
-<nav class="bg-white border-gray-200 dark:bg-teal-900">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="{{ url_for('home') }}" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="../static/img/contapapagne-logo.svg" style="margin: -16px;" class="h-16" alt="ContaPapagne Logo" />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">ContaPapagne</span>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
+            <img src="../static/img/contapapagne-logo.svg" alt="ContaPapagne Logo" style="height: 64px;">
+            <span class="ms-3">ContaPapagne</span>
         </a>
-        <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-teal-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-teal-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-            </svg>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-            <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-teal-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-teal-800 md:dark:bg-teal-900 dark:border-gray-700">
-                <li>
-                    <span hx-get="{{url_for('movimenti.dashboard')}}" hx-target="main" class="block py-2 px-3 text-gray-900 rounded hover:bg-teal-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-teal-700 dark:hover:text-white md:dark:hover:bg-transparent cursor-pointer">Movimenti</span>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#" hx-get="{{ url_for('movimenti.dashboard') }}" hx-target="#main">Movimenti</a>
                 </li>
-                <li>
-                    <span hx-get="{{url_for('investimenti.dashboard')}}" hx-target="main" class="block py-2 px-3 text-gray-900 rounded hover:bg-teal-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-teal-700 dark:hover:text-white md:dark:hover:bg-transparent cursor-pointer">Investimenti</span>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" hx-get="{{ url_for('investimenti.dashboard') }}" hx-target="#main">Investimenti</a>
                 </li>
-                <li>
-                    <span hx-get="{{url_for('budgets.dashboard')}}" hx-target="main" class="block py-2 px-3 text-gray-900 rounded hover:bg-teal-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-teal-700 dark:hover:text-white md:dark:hover:bg-transparent cursor-pointer">Budgets</span>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" hx-get="{{ url_for('budgets.dashboard') }}" hx-target="#main">Budgets</a>
                 </li>
-                <li>
-                    <span hx-get="{{url_for('settings.dashboard')}}" hx-target="main" class="block py-2 px-3 text-gray-900 rounded hover:bg-teal-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-teal-700 dark:hover:text-white md:dark:hover:bg-transparent cursor-pointer">Settings</span>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" hx-get="{{ url_for('settings.dashboard') }}" hx-target="#main">Settings</a>
                 </li>
             </ul>
         </div>
