--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -1,4 +1,5 @@
 <style>
+	/* CSS categorie */
     .category-item {
         padding: 8px 16px; 
         cursor: pointer;
@@ -7,9 +8,80 @@
     .category-item:hover {
         background-color: #f3f3f3; 
     }
+	/* CSS toggle slider */
+	/* The switch - the box around the slider */
+	.switch {
+		position: relative;
+		display: inline-block;
+		width: 60px;
+		height: 34px;
+	}
+
+	/* Hide default HTML checkbox */
+	.switch input {
+		opacity: 0;
+		width: 0;
+		height: 0;
+	}
+
+	/* The slider */
+	.slider {
+		position: absolute;
+		cursor: pointer;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: #e49504;
+		-webkit-transition: .4s;
+		transition: .4s;
+	}
+
+	.slider:before {
+		position: absolute;
+		content: "";
+		height: 26px;
+		width: 26px;
+		left: 4px;
+		bottom: 4px;
+		background-color: white;
+		-webkit-transition: .4s;
+		transition: .4s;
+	}
+
+	input:checked + .slider {
+		background-color: #2196F3;
+	}
+
+	input:focus + .slider {
+		box-shadow: 0 0 1px #2196F3;
+	}
+
+	input:checked + .slider:before {
+		-webkit-transform: translateX(26px);
+		-ms-transform: translateX(26px);
+		transform: translateX(26px);
+	}
+
+	/* Rounded sliders */
+	.slider.round {
+		border-radius: 34px;
+	}
+
+	.slider.round:before {
+		border-radius: 50%;
+	}
 </style>
 
 <form id="movimento-form" class="bg-light rounded px-3 pt-3 pb-3 mb-3" hx-post="{{url_for('movimenti.createMovimento')}}" hx-target="main">
+	<div>
+		USCITA
+		<label class="switch">
+			<input id="tipologia_movimento" name="tipologia_movimento" type="checkbox" onchange="switchTipoMovimento()">
+			<span class="slider round"></span>
+		</label>
+		ENTRATA
+	</div>
 	<div class="mb-3">
 			<label class="form-label" for="data_movimento">Data</label>
 			<input class="form-control" id="data_movimento" name="data_movimento" type="date" placeholder="Data Movimento">
@@ -18,7 +90,6 @@
 			<label class="form-label" for="importo_movimento">Importo</label>
 			<input class="form-control" id="importo_movimento" name="importo_movimento" type="number" min="0" step="0.01" placeholder="Importo">
 	</div>
-
     <div class="mb-3 position-relative">
         <label class="form-label" for="categoria_movimento">Categoria</label>
         <input class="form-control" id="categoria_movimento" name="categoria_movimento" type="text" hx-get="/movimenti/fetchCategorie" hx-target="#res_fetch" hx-swap="innerHTML" hx-trigger="keyup changed delay:500ms" hx-indicator="#fetch-indicator">
